--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -22,7 +22,7 @@ body{
 	display: none;
 }
 #new_table {
-    position:fixed;
+    position:absolute;
     opacity : 1;
     top: 0;
     left: 50%;
