--- a/src/templates/user/login.phtml
+++ b/src/templates/user/login.phtml
@@ -6,7 +6,7 @@
              <link rel="stylesheet" type="text/css" href="css/style.css"/>
              <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
              <script type="text/javascript" src="js/utils.js"></script>
-             <script src="https://rawgithub.com/digitalBush/jquery.maskedinput/1.3.1/dist/jquery.maskedinput.min.js" type="text/javascript"></script>
+             <script src="js/jquery.maskedinput.min.js" type="text/javascript"></script>
             <title>Regplat</title>
          </head>
          <body>
